--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 
 /* body */
-.body {
+body {
     font-family: 'Raleway', sans-serif;
 font-family: 'Roboto', sans-serif;
-counter-reset: #434455;
-background-attachment:#FFFFFF;
+color: #434455;
+background-color: #FFFFFF;
 }
 
 /* header */
@@ -35,4 +35,6 @@ color: #4D5AE5;
 
 .logo-a {
     text-decoration: none;
+    font-weight: 800px;
+
 }
