--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,33 @@ background-color: #FFFFFF;
 /* header */
 
 .logo-a {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: 800;
 font-size: 18px;
 line-height: 21px;
+line-height: 1.17px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4D5AE5;
+text-decoration: none;
 }
 
 .logo-sp {
-    color: #4D5AE5;
+    color: #2e2f42;
+}
+
+.list {
+    list-style: none;
+}
+
+.menu-a {
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+line-height: 1.5px;
+letter-spacing: 0.02em;
+color:#434455;
 }
