--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ color: #4D5AE5;
 text-decoration: none;
 }
 
+.link {
+    text-decoration: none;
+    color: #2e2f42;
+}
+
 .logo-sp {
     color: #2e2f42;
 }
@@ -39,7 +44,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 24px;
-line-height: 1.5px;
+line-height: 1.5;
 letter-spacing: 0.02em;
 color:#434455;
 }
