--- a/css/styles.css
+++ b/css/styles.css
@@ -12,23 +12,20 @@ background-color: #FFFFFF;
 
 /* header */
 
-.logo-a {
+.link {
     font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: 800;
 font-size: 18px;
 line-height: 21px;
-line-height: 1.17px;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4D5AE5;
 text-decoration: none;
 }
 
-.link {
-    text-decoration: none;
-    color: #2e2f42;
-}
+
 
 .logo-sp {
     color: #2e2f42;
