--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ background-color: #FFFFFF;
 
 /* header */
 
-.link {
+.link-1 {
     font-family: 'Raleway', sans-serif;
 font-style: normal;
 font-weight: 800;
