--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@
 color: #FFFFFF;
 }
 
+:root {
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 0.04em;
+    
+}
 
 
 /* body */
