--- a/css/styles.css
+++ b/css/styles.css
@@ -65,10 +65,10 @@ background-color: #FFFFFF;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--text-color);
+    color: var(--address-color)
 }
 
 .address-link:hover,
 .address-link:focus {
-    color: var(--address-color);
+    color: #404BBF;
 }
