--- a/css/styles.css
+++ b/css/styles.css
@@ -72,3 +72,33 @@ background-color: #FFFFFF;
 .address-link:focus {
     color: #404BBF;
 }
+
+/*--------------- MAIN ------------------*/
+
+.hero {
+    background-color: var(--text-color);
+}
+
+.hero-h {
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+}
+
+.hero-btn {
+    background-color: #4D5AE5;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+background-color: #404BBF;
+}
