--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ color: #434455;
 }
 
 .team-list-h {
-    font-size: 500;
+    font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
@@ -165,5 +165,10 @@ color: #434455;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
+}
+
+/*------------- FOOTER --------------*/
+
+.footer {
+    background-color: var(--text-color);
 }
