--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 --logo-color: #4D5AE5;
 --text-color: #2E2F42;
 --address-color: #434455;
+--portf-btn-backgr-color: #F4F4FD;
 }
 
 
@@ -171,4 +172,35 @@ color: #434455;
 
 .footer {
     background-color: var(--text-color);
+}
+
+.footer-span {
+    color: #F4F4FD;
+}
+
+
+/*----------------------- PORTFOLIO --------------------------*/
+/*----------------------- PORTFOLIO --------------------------*/
+/*----------------------- PORTFOLIO --------------------------*/
+/*----------------------- PORTFOLIO --------------------------*/
+
+.button-link {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: var(--logo-color);
+    background-color: var(--portf-btn-backgr-color);
+    cursor: pointer;
+}
+
+.button-link:hover,
+.button-link:focus {
+    color: #FFFFFF;
+    background-color: #404BBF;
+}
+
+.link {
+    text-decoration: none;
 }
