--- a/css/styles.css
+++ b/css/styles.css
@@ -172,6 +172,7 @@ color: #434455;
 
 .footer {
     background-color: var(--text-color);
+    font-family: "Raleway", sans-serif;
 }
 
 .footer-span {
@@ -221,25 +222,3 @@ color: #434455;
 }
 
 /*----------------- FOOTER -----------------*/
-
-.footer-portf {
-    color: var(--text-color);
-}
-
-.logo {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--logo-color);
-}
-
-.link {
-    text-decoration: none;
-}
-
-.logo-sp {
-    color: var(--portf-btn-backgr-color);
-}
